name:                pkcs10
version:             0.1.0.0
synopsis:            PKCS#10 library
description:         Please see README.md
homepage:            http://github.com/TimothyKlim/pkcs10-hs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Timothy Klim
maintainer:          github@timothyklim.com
copyright:           2015 Timothy Klim
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -W
  hs-source-dirs:      src
  exposed-modules:     Data.X509.PKCS10
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base64-bytestring
                     , containers
                     , memory
                     , x509
                     , x509-store
                     , cryptonite
                     , pem
                     , asn1-types
                     , asn1-encoding
                     , asn1-parse

test-suite tests
  ghc-options:         -W
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , pkcs10
                     , HUnit
                     , bytestring
                     , cryptonite
                     , pem
                     , x509
